# analiza_matematyczna_2

./: .gitignore  .gitmodules  Lab_1.ipynb  Lab_2.ipynb  gui.ini  imgui.ini  readme.md  requirements.txt  window.ini
Lab1/: Lab_1.ipynb
Lab2/: CMakeLists.txt  Lab_2.ipynb  Main.cpp  Mandelbrot.h  Shaders.h
Lab2 Krzywe zioma/: CMakeLists.txt  Main.cpp
Lab2 Krzywe zioma/Gui/: CMakeLists.txt  Gui.cpp  Gui.h
Lab2 Krzywe zioma/Renderer/: CMakeLists.txt
Lab2 Krzywe zioma/Renderer/OpenGL/: CMakeLists.txt  OpenGL_Renderer.cpp  OpenGL_Renderer.h
Lab2 Krzywe zioma/Renderer/Shaders/: shaders.h
Lab2/Gui/: CMakeLists.txt  Gui.cpp  Gui.h
Lab2/Renderer/OpenGL/: OpenGL_Renderer.cpp  OpenGL_Renderer.h
Lab2/Renderer/Shaders/: shaders.h
Lab3/: Lab_3.ipynb
Lab4/: Lab_4.ipynb
Lab5/: Lab_5.ipynb
